# Latite

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CppProperties.json  Latite.cppm.ifc.d.json  LatiteRewrite.rc  LatiteRewrite.sln  LatiteRewrite.vcxproj  LatiteRewrite.vcxproj.filters  README.md  resource.h
.github/workflows/: clang-format.yml  debug-build.yml  msbuild.yml  nightly-build.yml  releasebuild.yml
assets/: latiteapi.js
assets/lang/: ar_AR.json  ar_SA.json  cs_CZ.json  en_US.json  es_ES.json  fr_FR.json  hi_IN.json  ja_JP.json  nl_NL.json  pt_BR.json  pt_PT.json  ru_RU.json  zh_CN.json  zh_TW.json
cmake/: GenerateBuildTimestamp.cmake  StampBuildTimestamp.ps1
enc_temp_folder/c23b45297517108c75358c42a5a5e8/: ScriptManager.cpp
enc_temp_folder/de1e28ff71f6ba73e4dd86bcba515d/: Filesystem.cpp
enc_temp_folder/f159a874b58e7f12d50f5f31a9e789b/: JsSettingClass.cpp
src/: CMakeLists.txt  Latite.h  pch.h  pch.js  resource.h
src/api/: CMakeLists.txt
src/api/config/: Config.cpp  Config.h  ConfigManager.h
src/api/eventing/: Event.h  EventManager.cpp  EventManager.h  Listenable.h
src/api/feature/: CMakeLists.txt  Feature.h
src/api/feature/command/: Command.h  CommandManager.h
src/api/feature/module/: Module.h  ModuleManager.h
src/api/feature/setting/: Setting.cpp  Setting.h  SettingGroup.h
src/api/hook/: Hook.h
src/api/manager/: CMakeLists.txt  FeatureManager.h  Manager.h  StaticManager.h
src/api/memory/: CMakeLists.txt  memory.cpp  memory.h
src/api/memory/signature/: signature.cpp  signature.h
src/api/scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h  legacyScanner.cpp
src/client/: BuildTimestamp.h  CMakeLists.txt  Latite.cpp  Latite.h  test.js
src/client/asset/: Assets.cpp  Assets.h
src/client/command/: CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
src/client/command/impl/: CMakeLists.txt  EjectCommand.cpp  HelpCommand.cpp
src/client/config/: Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h
src/client/event/: Event.h  Eventing.cpp  Eventing.h  Events.h  Listener.h
src/client/event/events/: AfterEntityRenderEvent.h  AfterMoveEvent.h  AppSuspendedEvent.h  AttackEvent.h  AveragePingEvent.h  BeforeMoveEvent.h  BobHurtEvent.h  BobMovementEvent.h  CharEvent.h  ChatEvent.h  ChatMessageEvent.h  CinematicCameraEvent.h  ClickEvent.h  ClientTextEvent.h  DrawHUDModulesEvent.h  FocusLostEvent.h  FogColorEvent.h  GammaEvent.h  GetFormattedNameTagEvent.h  GetTimeEvent.h  HideHandEvent.h  KeyUpdateEvent.h  LatiteClientMessageEvent.h  LeaveGameEvent.h  MouseReleaseEvent.h  OutlineSelectionEvent.h  OverlayColorEvent.h  PacketReceiveEvent.h  PerspectiveEvent.h  RenderGameEvent.h  RenderGuiItemEvent.h  RenderLayerEvent.h  RenderLevelEvent.h  RenderNameTagEvent.h  RenderOverlayEvent.h  RendererCleanupEvent.h  RendererInitEvent.h  SendPacketEvent.h  SensitivityEvent.h  TickEvent.h  (+3 more)
src/client/event/impl/: AfterEntityRenderEvent.h  AfterMoveEvent.h  AppSuspendedEvent.h  AttackEvent.h  AveragePingEvent.h  BeforeMoveEvent.h  BobHurtEvent.h  BobMovementEvent.h  CharEvent.h  ChatEvent.h  CinematicCameraEvent.h  ClickEvent.h  ClientTextEvent.h  DrawHUDModulesEvent.h  FocusLostEvent.h  FogColorEvent.h  GammaEvent.h  GetFormattedNameTagEvent.h  GetTimeEvent.h  HideHandEvent.h  KeyUpdateEvent.h  LatiteClientMessageEvent.h  LeaveGameEvent.h  OutlineSelectionEvent.h  OverlayColorEvent.h  PacketReceiveEvent.h  PerspectiveEvent.h  PreRenderItemEvent.h  RenderGameEvent.h  RenderGuiItemEvent.h  RenderItemRotateEvent.h  RenderLayerEvent.h  RenderLevelEvent.h  RenderOverlayEvent.h  RendererCleanupEvent.h  RendererInitEvent.h  SendPacketEvent.h  SensitivityEvent.h  TickEvent.h  UpdateEvent.h  (+2 more)
src/client/feature/: Feature.h
src/client/feature/command/: CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
src/client/hook/: CMakeLists.txt  Hook.cpp  Hook.h  Hooks.cpp  Hooks.h
src/client/input/: Keyboard.cpp  Keyboard.h
src/client/localization/: English.cpp  English.h  LocalizeData.cpp  LocalizeData.h  LocalizeString.cpp  LocalizeString.h  Spanish.cpp  Spanish.h
src/client/manager/: Manager.h  StaticManager.h
src/client/misc/: CMakeLists.txt  ClientMessageQueue.cpp  ClientMessageQueue.h  ClientMessageSink.cpp  ClientMessageSink.h  DiscordIpcClient.cpp  DiscordIpcClient.h  NameTagCache.cpp  NameTagCache.h  Notifications.cpp  Notifications.h  PlayerHeadCache.cpp  PlayerHeadCache.h  TempStorage.cpp  TempStorage.h  Timings.cpp  Timings.h  WaypointManager.cpp  WaypointManager.h
src/client/module/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.h
src/client/render/: Assets.cpp  Assets.h  Renderer.cpp  Renderer.h
src/client/resource/: InitResources.h  Resource.h
src/client/screen/: Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h  TextBox.cpp  TextBox.h
src/client/script/: CMakeLists.txt  JsEvented.cpp  JsEvented.h  JsLibrary.h  JsPlugin.cpp  JsPlugin.h  JsScript.cpp  JsScript.h  PluginManager.cpp  PluginManager.h  ScriptManager.cpp  ScriptManager.h  ScriptingObject.cpp  ScriptingObject.h
src/client/signature/: storage.h
src/client/ui/: TextBox.cpp  TextBox.h
src/latite/: Latite.cpp
src/mc/: Addresses.h  Util.h  Version.h
src/sdk/: String.h  Util.h  Version.h  util.h
src/sdk/misc/: ClickMap.cpp  ClickMap.h
src/sdk/server/: ServerInstance.h
src/sdk/signature/: storage.h  storage_1_16_40.h  storage_1_18_12.h  storage_1_19_51.h  storage_1_20_30.h  storage_1_20_40.h  storage_latest.h
src/util/: CMakeLists.txt  ChakraUtil.cpp  ChakraUtil.h  Crypto.h  DrawContext.cpp  DrawContext.h  DrawUtil3D.cpp  DrawUtil3D.h  DxContext.cpp  DxContext.h  DxUtil.cpp  DxUtil.h  ErrorHandler.h  ExceptionHandler.cpp  ExceptionHandler.h  FNV32.h  ImRendererScreenContext.cpp  ImRendererScreenContext.h  Json.h  LMath.h  Logger.cpp  Logger.h  Util.cpp  Util.h  WorldToScreen.cpp  WorldToScreen.h  XorString.h  chash.h  memory.cpp  memory.h  signature.cpp  signature.h
tools/: embed_resource.py
tools/hooks/: pre-commit  pre-commit.ps1  pre-commit.sh
(+675 files in other folders)
